# my-jupyterlab

./: Makefile  README.md  jupyter_server_config.py  pyproject.toml
.ipython/: ipython_kernel_config.py
.ipython/profile_default/startup/: 101-plotting.ipy  101-plotting.py
.jupyter/: jupyter_lab_config.py
systemd/user/: jupyter.service
