[tool.poetry]
name = "jupyterlab-poetry"
version = "0.1.0"
description = "JupyterLab with core useful extensions"
authors = ["Max Kochurov <max.kochurov@pymc-labs.io>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = { version="^4.0.9"}
jupyterlab-git = "^0.50.0"
ipywidgets = "*"
dask-labextension = "*"
jupyterlab_latex = "*"
jupyterlab-code-formatter = "*"
black = "*"
isort = "*"
RISE = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

